# terraform-deployer

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh
src/: README.md  pyproject.toml
src/deployer/: main.py
src/deployer/artifacts_builder/: __init__.py  artifacts_builder.py  git.py  make_key.py  reference_bundler.py  zipper.py
src/deployer/commons/: checker.py  parser.py
src/deployer/credentials_providers/: __init__.py  aws_provider.py  base_providers.py  credentials_checker.py
src/deployer/tf_loader/: __init__.py  aws_loader.py  executer.py  loader_base.py
