[tool.poetry]
name = "deployer"
version = "0.1.0"
description = ""
authors = ["Caio Cominato <caio.cominato@fiberfast.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.137"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
